# streamer

./: .gitignore  README.md  biome.json  docker-compose.yml
app/: consumer.py  files_consumer.py  fill_input.py  kafka-config.ini  producer.py  settings.py
auth-app/: README.md  pyproject.toml
auth-app/auth0/: fastapi-server.py  flask-server.py
auth-app/photos/: main.py
auth-app/printer/: main.py
auth-app/simple-password/photos/: main.py
auth-app/simple-password/printer/: main.py
busdata/: app.py  busconsumer.py  busdata1.py  busdata2.py  busdata3.py
busdata/data/: bus1.json  bus2.json  bus3.json
busdata/templates/: index.html
canvas-draw/: package.json
canvas-draw/src/: index.css  index.html  index.ts
chatter/: README.md  pyproject.toml  test.py
chatter/chatter/: config.py  dependencies.py  index.html  main.py
chatter/chatter/api/: agent.py  assistant.py
chatter/chatter/services/: assistant.py  event_handler.py
chatter/chatter_mcp/: server.py
chatter/ui/: index.html
chatter/ui/src/: App.css  App.tsx  Streamer.tsx  index.css
cursor-backend/: consume.py  heatmapper.py  messages.json  server.py
cursor-backend/heatmapper/: consume.py  drawing.py
cursor/src/: index.css  index.html  index.ts
image_processing/: README.md  docker-compose.yml  pyproject.toml
image_processing/image_processing/: ai.py  labels.json  producer.py  settings.py  shell.py  upload_sample.py  utils.py
image_processing/image_processing/api/: database.py  main.py  models.py  producer.py  repository.py  utils.py
image_processing/image_processing/workers/: generate_preview.py  image_processor.py  models.py  save_features.py
image_processing/migrations/: env.py  script.py.mako
image_processing/migrations/versions/: 0198e3ad2d51_add_embeddings.py  7d10a46c8880_add_mimetype.py  89f9206c5d2a_initial.py  a88a683391a9_add_preview.py
kraft/: docker-compose.yml
proxy-or-not/: Dockerfile  app.py  docker-compose.yml  nginx.conf
proxy-or-not/ui/: README.md  package-lock.json  package.json  vite.config.js
proxy-or-not/ui/.github/: copilot-instructions.md
proxy-or-not/ui/src/: App.jsx  Page1.jsx  Page2.jsx
puckit/: README.md  index.html  package.json  pnpm-lock.yaml
puckit/src/: Editor.tsx  index.css  main.tsx
scaler/: README.md  consumer.py  producer.py  results-consumer.py
slit/: pyproject.toml
slit/slit/: app.py  app_test.py
web/: Dockerfile  app.py  requirements.txt
websockets/: busdata.html  client.py  server.py  show_time.html  show_time2.py  swarm.py
