[project]
name = "auth-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Matas Seimys",email = "matas.seimys@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pyjwt (>=2.10.1,<3.0.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.ruff]
line-length = 130
indent-width = 4

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
test = "pytest -v"

[tool.poe.tasks.photos]
use_exec = true  # or we get stuck inside asyncio loop
cmd = "uvicorn photos.main:app --host 0.0.0.0 --port 5000 --reload"

[tool.poe.tasks.printer]
use_exec = true
cmd = "uvicorn printer.main:app --host 0.0.0.0 --port 3000 --reload"
