[project]
name = "chatter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "openai>=1.76.0",
    "openai-agents>=0.0.14",
    "poethepoet>=0.34.0",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "ruff>=0.11.7",
]

[tool.ruff]
line-length = 130
indent-width = 4

[tool.poe]
executor.type = "uv"
env = { PYTHONPATH = "." }

[tool.poe.tasks]
dev = "fastapi dev chatter/main.py --port 5000 --host 0.0.0.0 --reload"
